--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-models/* filter=lfs diff=lfs merge=lfs -text
-models/ filter=lfs diff=lfs merge=lfs -text
+models/** filter=lfs diff=lfs merge=lfs -text
 example_data/** filter=lfs diff=lfs merge=lfs -text
