remove netcdf files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 
 # pycache files
 *.pyc
+
+# ignore /home/disk/quicksilver2/zespinos/DLESyM/evaluation/enso_figure10/data
+evaluation/enso_figure10/data/
+
